--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   }
